# just-logs-server

./: .dockerignore  .env.example  .gitignore  COMPACT_LOG_VIEW.md  DASHBOARDS_AND_ENVIRONMENTS.md  DASHBOARDS_MVP.md  DASHBOARDS_QUICKSTART.md  DASHBOARD_UI_IMPROVEMENTS.md  Dockerfile  FIXED_MIGRATIONS.md  Justfile  MIGRATIONS.md  MIGRATION_GUIDE.md  README.md  README_TESTING.md  SECURITY_FIXES.md  TESTING.md  TEST_DASHBOARDS.md  UI_IMPROVEMENTS_SUMMARY.md  dev-server.sh  docker-compose.yml  start.sh  test_security_fixes.py  test_server_timestamp.py  watch-build.sh
backend/: auth.py  database.py  main.py  migration_manager.py  migrations_cli.py  models.py  pyproject.toml  pytest.ini  requirements.txt  retention_scheduler.py  run_tests.sh  write_queue.py
backend/migrations/: 20260101000000_initial_schema.sql  20260201000000_add_log_features.sql  20260301000000_add_web_user_features.sql  20260401000000_add_server_timestamp.sql  20260501000000_add_dashboards.sql  20260601000000_add_environment_support.sql  README.md
backend/tests/: README.md  __init__.py  conftest.py  test_api.py  test_migrations.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  themes.css
frontend/src/components/: AppLayout.vue  ChangePasswordDialog.vue  CommandPalette.vue  FilterBar.vue  LogEntryCard.vue  LogHistogram.vue  LogTable.vue  SignalsSidebar.vue  ThemeSwitcher.vue  TimeRangePicker.vue  Toast.vue
frontend/src/composables/: useSidebar.js  useTheme.js  useToast.js
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: ApiKeys.vue  Apps.vue  Dashboard.vue  DashboardView.vue  DashboardsList.vue  Login.vue  Profile.vue  Settings.vue  Users.vue
jlo-tui/: .gitignore  AUTHENTICATION.md  Cargo.toml  README.md  SUMMARY.md  config.toml.example
jlo-tui/src/: app.rs  config.rs  main.rs  utils.rs
jlo-tui/src/api/: client.rs  mod.rs  models.rs  sse.rs
jlo-tui/src/ui/: filters.rs  help.rs  login.rs  logs.rs  mod.rs
